--- a/begin_table_centering_iflatexml_begin__1.tex
+++ b/begin_table_centering_iflatexml_begin__1.tex
@@ -9,7 +9,7 @@ TR (ms)                   &                 2300 &                 2300 &       
 TE (ms)                   &                 2.96 &                 2.98 &               2.98 &                2.96 &                2.96 &                3.22 \\
 Strength (T)              &                    3 &                    3 &                  3 &                   3 &                   3 &                   3 \\
 TI (ms)                   &                  900 &                  900 &                900 &                 900 &                 900 &                 900 \\
-Flip Angle ($^circ$)            &                    9 &                    9 &                  9 &                   9 &                   9 &                   8 \\
+Flip Angle ($^\circ$)            &                    9 &                    9 &                  9 &                   9 &                   9 &                   8 \\
 Make                  &                   Si &                   Si &                 Si &                  Si &                  Si &                  Si \\
 Voxel Size (mm)            &                1x1x1 &              1x1x1.1 &              1x1x1 &               1x1x1 &               1x1x1 &               1x1x1 \\
 Distortion Correction &                    Y &                    N &                  Y &                   Y &                   Y &                   N \\
