--- a/subsectionAcquisitio.tex
+++ b/subsectionAcquisitio.tex
@@ -1,4 +1,4 @@
 \subsection{Acquisition}
-T1-weighted 3D-MPRAGE images were acquired from 12 healthy subjects (3 Male, 9 Female, ages 24-57) in 20 scanners across Europe and the United States. Institutional approval was acquired and signed consent was obtained for each subject at each site. These scanners varied in make and model, including all three major manufacturers: Siemens, GE, Philips. Two scans were acquired from each subject, where the subject got out of the scanner between scans for a couple minutes, and was repositioned and rescanned by the scanning technician of that particular site. Previously, Jovicich and colleagues showed that reproducible head positioning along the $z$ axis significantly reduced image intensity variability across sessions \cite{freesurferReliability}. By repositioning in our study, a realistic measure of test-retest variability, which includes the repositioning consistency of each site's scanning procedure, was captured. Because gradient distortion effects correspond to differences in z-positioning \cite{caramanos2010gradient}, the average translation in the Z-direction between the two runs of each subject at each site was estimated with a rigid body registration. The average translation in the Z-direction was $3.5mm \pm 3.7mm$, which falls within the range reported by \cite{caramanos2010}. The repositioning Z-translation measurements for each site is reported in the supplemental materials.
+T1-weighted 3D-MPRAGE images were acquired from 12 healthy subjects (3 Male, 9 Female, ages 24-57) in 20 scanners across Europe and the United States. Institutional approval was acquired and signed consent was obtained for each subject at each site. These scanners varied in make and model, including all three major manufacturers: Siemens, GE, Philips. Two scans were acquired from each subject, where the subject got out of the scanner between scans for a couple minutes, and was repositioned and rescanned by the scanning technician of that particular site. Previously, Jovicich and colleagues showed that reproducible head positioning along the $z$ axis significantly reduced image intensity variability across sessions \cite{freesurferReliability}. By repositioning in our study, a realistic measure of test-retest variability, which includes the repositioning consistency of each site's scanning procedure, was captured. Because gradient distortion effects correspond to differences in z-positioning \cite{caramanos2010gradient}, the average translation in the Z-direction between the two runs of each subject at each site was estimated with a rigid body registration. The average translation in the Z-direction across all sites was $3.5mm \pm 3.7mm$, which falls within the range reported by \cite{caramanos2010}. The repositioning Z-translation measurements for each site separately is reported in the supplemental materials.
 
 Tables 1 through \ref{tab:acquisition4} show the acquisition parameters for all 20 scanners. Note that the definitions of repetition time (TR), inversion time (TI) and echo time (TE) vary by scanner make. For example, the TR in a Siemens scanner is the time between preparation pulses, while for Philips and GE, the TR is the time between excitation pulses. We decided to report the parameters according to the scanner make definition, rather than trying to make them uniform, because slightly different pulse programming rationales would make a fair comparison difficult. In addition, a 3D-FLASH sequence (TR=20ms, TE=4.92ms, flip angle=25 degrees, resolution=1mm isotropic) was acquired on healthy controls and MS patients at site 12, in order to compare differences in scaling factor estimates between patients and healthy controls. 
