--- a/begin_table_centering_iflatexml_begin__.tex
+++ b/begin_table_centering_iflatexml_begin__.tex
@@ -44,16 +44,16 @@ scGMV                 &                   .98 &                        .99 &    
 \toprule
 {} & 5 &          6 & 7 & 8 & 9 \\
 \midrule
-TR                    &                   8.21 &                        7.80 &                     9 &               8.21 &                 6.99 \\
-TE                    &                   3.22 &                        2.90 &                  4.00 &               3.81 &                 3.16 \\
-Strength              &                      3 &                           3 &                     3 &                  3 &                    3 \\
-TI                    &                    450 &                         450 &                  1000 &            1016.30 &                  900 \\
-Flip Angle            &                     12 &                          12 &                     8 &                  8 &                    9 \\
+TR (ms)                    &                   8.21 &                        7.80 &                     9 &               8.21 &                 6.99 \\
+TE (ms)                   &                   3.22 &                        2.90 &                  4.00 &               3.81 &                 3.16 \\
+Strength (T)              &                      3 &                           3 &                     3 &                  3 &                    3 \\
+TI (ms)                   &                    450 &                         450 &                  1000 &            1016.30 &                  900 \\
+Flip Angle ($^\circ$)           &                     12 &                          12 &                     8 &                  8 &                    9 \\
 Make                  &                     GE &                          GE &                    Ph &                 Ph &                   Ph \\
-Voxel Size            &                  .94x.94x1 &                     1x1x1.2 &                 1x1x1 &              1x1x1 &                1x1x1 \\
+Voxel Size (mm)           &                  .94x.94x1 &                     1x1x1.2 &                 1x1x1 &              1x1x1 &                1x1x1 \\
 Distortion Correction &                      N &                           Y &                     Y &                  Y &                    Y \\
 Parallel Imaging      &                      2 &                           2 &                     3 &                  2 &                    - \\
-FOV                   &                      240x240x172 &                 256x256x166 &           240x240x170 &        240x240x160 &          256x256x204 \\
+FOV (mm)                  &                      240x240x172 &                 256x256x166 &           240x240x170 &        240x240x160 &          256x256x204 \\
 Read Out Direction    &                      HF &                          FH &                    AP &                 FH &                   FH \\
 Head coil \# channels  &                      8 &                           8 &                    16 &                 32 &                    8 \\
 Model                 &              MR750 &                  Signa HDxt &               Achieva &         Achieva TX &               Intera \\
