--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -44,16 +44,16 @@ scGMV                 &               .98 &               .98 &               .9
 \toprule
 {} & 16 & 17& 18 & 19 & 20 \\
 \midrule
-TR                    &               2300 &               2150 &               1900 &               1900 &               1800 \\
-TE                    &               2.98 &               3.40 &               3.03 &               2.52 &               3.01 \\
-Strength              &                  3 &                  3 &                  3 &                  3 &                  3 \\
-TI                    &                900 &               1100 &                900 &                900 &                900 \\
-Flip Angle            &                  9 &                  8 &                  9 &                  9 &                  9 \\
+TR (ms)                   &               2300 &               2150 &               1900 &               1900 &               1800 \\
+TE (ms)                   &               2.98 &               3.40 &               3.03 &               2.52 &               3.01 \\
+Strength (T)              &                  3 &                  3 &                  3 &                  3 &                  3 \\
+TI (ms)                   &                900 &               1100 &                900 &                900 &                900 \\
+Flip Angle ($^\circ$)            &                  9 &                  8 &                  9 &                  9 &                  9 \\
 Make                  &                 Si &                 Si &                 Si &                 Si &                 Si \\
-Voxel Size            &              1x1x1 &              1x1x1 &              1x1x1 &              1x1x1 &        .86x.86x.86 \\
+Voxel Size (mm)           &              1x1x1 &              1x1x1 &              1x1x1 &              1x1x1 &        .86x.86x.86 \\
 Distortion Correction &                  N &                  N &                 N  &                  N &                  N \\
 Parallel Imaging      &                  2 &                  2 &                  2 &                  2 &                  2 \\
-FOV                   &        256x256x176 &        256x256x192 &        256x256x176 &        256x256x192 &        220x220x179 \\
+FOV (mm)                  &        256x256x176 &        256x256x192 &        256x256x176 &        256x256x192 &        220x220x179 \\
 Read Out Direction    &                 HF &                 RL &                 AP &                 FH &                 FH \\
 Head coil \# channels  &                 12 &                 12 &                 12 &                 32 &                 32 \\
 Model                 &               Trio &               Trio &               Trio &               Trio &               Trio \\
