--- a/begin_table_begin_tabular_c__.tex
+++ b/begin_table_begin_tabular_c__.tex
@@ -1,4 +1,5 @@
 \begin{table} 
+\centering
     \begin{tabular}{ c c c c }
         ROI & ICC BW & ICC BW Cal & \cite{cannon2014} ICC BW \\ 
         \midrule
