--- a/begin_table_begin_tabular_c__1.tex
+++ b/begin_table_begin_tabular_c__1.tex
@@ -1,4 +1,5 @@
 \begin{table} 
+\centering
     \begin{tabular}{ c c c c }
         ROI & ICC WI & ICC WI Cal & \cite{jovicich2013brain} ICC WI Average \\ 
         \midrule
