--- a/which_should_be_used.tex
+++ b/which_should_be_used.tex
@@ -1,1 +1,2 @@
 which should be used for a more accurate power analysis if the specific number of subjects per site and the site's scaling factors are known.
+%akeshavan_end_stitch
